# xdj-midi-beat

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml
.github/vendor-patches/: build.rs  link_bindings.rs
.github/workflows/: ci.yml  esp32-ci.yml  esp32-release.yml  release.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/drafts/: esp32-s3-compilation.md
.sisyphus/plans/: multi-architecture-refactor-plan.md
crates/xdj-core-prolink/: Cargo.toml
crates/xdj-core-prolink/src/: build.rs  constants.rs  lib.rs  math.rs  parse.rs  types.rs
esp32/: Cargo.toml  build.rs  rust-toolchain.toml.bak
esp32-emulator/: Cargo.toml
esp32-emulator/src/: main.rs  verify_stopped.rs
esp32/.cargo/: config.toml
esp32/src/: main.rs  midi.rs  prolink.rs  state.rs  webui.rs
esp32/src/emulator/: mod.rs
esp32/webui/: index.html
host/: Cargo.toml
host/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
host/src/link/: mod.rs
host/src/midi/: clock.rs  mapper.rs  mod.rs  soak.rs  test_utils.rs  timecode.rs  transport.rs
host/src/prolink/: beat_listener.rs  builder.rs  discovery.rs  metadata.rs  mod.rs  packets.rs  status_listener.rs  virtual_cdj.rs
host/src/runtime/: applier.rs  link.rs  logger.rs  midi.rs  mod.rs  prolink.rs
host/src/state/: beat_source.rs  device.rs  dj_state.rs  mod.rs  song_structure.rs  timing.rs  track_change.rs
host/src/tui/: mod.rs  render.rs  state.rs
src/: main.rs  state.rs
src/link/: mod.rs
src/midi/: timecode.rs
src/prolink/: metadata.rs  mod.rs  status_listener.rs  virtual_cdj.rs
src/tui/: mod.rs  render.rs
