[workspace]
resolver = "2"
members = [
  "host",
  "esp32",
  "esp32-emulator",
]

[workspace.package]
version = "1.1.7"
edition = "2021"
license = "Proprietary"
authors = ["xdj-midi team"]

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
rusty_link = { path = "vendor/rusty_link" }
