[workspace]
resolver = "2"
members = [
  "host",
  "esp32",
  "esp32-emulator",
  "crates/xdj-core-prolink",
]

# `xdj-clock-esp32` requires an ESP-IDF toolchain/environment; keep it as a
# workspace member but exclude it from the default test/build set so
# `cargo test --locked` remains runnable on non-ESP32 hosts.
default-members = [
  "host",
  "esp32-emulator",
  "crates/xdj-core-prolink",
]

[workspace.package]
version = "1.2.8"
edition = "2021"
license = "Proprietary"
authors = ["xdj-midi team"]

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
rusty_link = { path = "vendor/rusty_link" }
