[package]
name = "xdj-clock-esp32-emulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xdj-clock-esp32-emulator"
path = "src/main.rs"

[[bin]]
name = "verify-stopped"
path = "src/verify_stopped.rs"


[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "net", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
socket2 = "0.5"
xdj-core-prolink = { path = "../crates/xdj-core-prolink" }
serde_json = "1.0.149"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

