[package]
name = "xdj-clock-esp32"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
esp-idf-sys = "0.37"
esp-idf-hal = "0.46"
esp-idf-svc = "0.52"
embedded-hal = "1.0"
smoltcp = "0.11"
heapless = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
embassy-sync = "0.8"
embassy-time = "0.5"
xdj-core-prolink = { path = "../crates/xdj-core-prolink", default-features = false }
